src/objects/Geocoding_Field_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps typical address fields to specific SObject fields to support geolocation</description>
    <fields>
        <fullName>City_Field__c</fullName>
        <description>The name of the city field for this address mapping</description>
        <inlineHelpText>The name of the city field for this address mapping</inlineHelpText>
        <label>City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Field__c</fullName>
        <description>The name of the country field for this address mapping</description>
        <inlineHelpText>The name of the country field for this address mapping</inlineHelpText>
        <label>Country Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude_Field__c</fullName>
        <description>The name of the latitude field for this address mapping</description>
        <inlineHelpText>The name of the latitude field for this address mapping</inlineHelpText>
        <label>Latitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude_Field__c</fullName>
        <description>The name of the longitude field for this address mapping</description>
        <inlineHelpText>The name of the longitude field for this address mapping</inlineHelpText>
        <label>Longitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Field__c</fullName>
        <description>The name of the zip/postal code field for this address mapping</description>
        <inlineHelpText>The name of the zip/postal code field for this address mapping</inlineHelpText>
        <label>Postal Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <inlineHelpText>The name of the SObject for this address map</inlineHelpText>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Field__c</fullName>
        <description>The name of the state field for this address mapping</description>
        <inlineHelpText>The name of the state field for this address mapping</inlineHelpText>
        <label>State Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Field__c</fullName>
        <description>The name of the street field for this SObject address</description>
        <inlineHelpText>The name of the street field for this SObject address</inlineHelpText>
        <label>Street Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geocoding Field Map</label>
</CustomObject>